Further testings